[bumpversion]
current_version = 0.9.40
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:imcsdk/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
description-file = README.rst
